Add possibility to set the retain flag for the mqtt message

--- a/dhtpubmqttd.conf
+++ b/dhtpubmqttd.conf
@@ -1,19 +1,20 @@
-//
-// config file for dhtpubmqttdaemon
-//
-// all values are case sensitive !
-//
+# all entries are case sensitive!
+
+
+    
+enabled = true;
 log_level = 2 ;
 
-dht_readinterval = 180;              // read values every 3 minutes (time in sec)
+dht_readinterval = 180;             // 3min  time in sec
     
 mqtt = {
-    host = "smartpi";               // ip or name of the mqtt server
-    port = 1883 ;                   // listening port of the mqtt server
-    user = "mqttusername" ;             
-    user_pw = "mqttuserpassword" ;
-    topic = "raspberry/data" ;      // topic for publishing the data
-    connect_retries = 10 ;          // try 10 times with a delay off one second to connect
+    host = "smartpi";
+    port = 1883 ;
+    user = "mqtt_device" ;
+    user_pw = "" ;
+    topic = "raspberry/data" ;
+    retain = true ;
+    connect_retries = 10 ;   // try 10 times with a delay off one second to connect
 };
 
 
